test/expect/cmd.start-missing.stderr.txt
^error: argument to '--castxml-start' is missing \(expected 1 value\)

Usage: castxml .*$
